--- a/l/lu/lup/lupus.org.html
+++ b/l/lu/lup/lupus.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lupus.org privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216013138id_/http%3A//www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx%3Farticleid%3D283%26zoneid%3D76) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lupus.org privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616061641id_/http%3A//www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx%3Farticleid%3D283%26zoneid%3D76) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head><script language="JavaScript">function openppl(app,tlb,mnu,wdt,hei){window.open('http://www.lupus.org/webmodules/webarticlesnet/' + app,'','toolbar=' + tlb +',location=0,status=1,menubar=' + mnu +',scrollbars=1,resizable=1,width=' + wdt + ',height=' + hei);}</script>
 <!-- InstanceBegin template="/Templates/new_empty.dwt.aspx" codeOutsideHTMLIsLocked="false" -->
@@ -49,80 +49,24 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </head>
 <body>
 <script language="JavaScript1.2">//mmLoadMenus();</script>
-<table width="920" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
+<table width="942" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
   <tbody><tr>
-    <td width="190"><div align="center"><a href="http://www.lupus.org/"><img src="/newsite/images/logo_lupus.gif" alt="Lupus Logo" width="135" height="85" border="0"></a></div></td>
-    <td width="720" valign="middle"><table width="70%" border="0" align="right" cellpadding="0" cellspacing="7">
-      <form name="zipcode" method="post" action="MyLUPUS_zip/ziplocator_result.asp"></form> 
-		<tbody><tr>
-        <td align="left" valign="middle">&nbsp;</td>
-        <td width="41%" align="right" valign="middle"><div align="left"><img src="/newsite/images/arrow_orange.gif" alt="arrow orange" width="10" height="12"><span class="footer"> Find Your Local Chapter &gt;&gt;</span> </div></td>
-        <td width="18%" align="center" valign="bottom"><div align="left">
-          <input name="zipcode" type="text" class="zipcode" id="zipcode" value="Enter Zip Code" size="12" onfocus="if(this.value==this.defaultValue)this.value=''">
-        </div></td>
-        <td width="12%" align="center" valign="middle"><div align="left">
-          <input name="image" type="image" src="/newsite/images/go_button.gif" width="20" height="20">
-        </div></td>
-      </tr>
-	  
-      <tr>
-        <td width="29%" align="left" valign="middle">&nbsp;</td>
-        <td colspan="3" align="left" valign="middle"><img src="/newsite/images/arrow_orange.gif" alt="arrow orange" width="10" height="12"><a href="hhttp://donate.lupus.org/site/PageServer?pagename=registration" class="footer">Enewsletter Sign-Up </a>| <a href="http://www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx?articleid=280&amp;zoneid=76" class="footer">About LFA </a></td>
-        </tr>
-    </tbody></table></td>
+    <td width="190"><div align="left"><a href="http://www.lupus.org/"><img src="/newsite/images/logo_lupus.gif" alt="Lupus Logo" width="135" height="85" border="0"></a></div></td>
+       <td width="720" valign="middle" align="right">
+    <table width="253" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td width="240" height="35"></td></tr><tr>
+			  <td width="240" height="52" class="valign_top" align="right">
+
+            <form id="cse-search-box" action="http://www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx" style="display:inline;"><input type="hidden" name="cx" value="016941646516273541596:ivv9xkjkidg"><input type="hidden" name="cof" value="FORID:11"> <input name="q" type="text" class="textbox_search"><input type="submit" name="sa" value="Search" class="button_search"></form><script type="text/javascript" src="http://www.google.com/coop/cse/brand?form=cse-search-box&amp;lang=en"></script><div class="utility_nav"><br><ul><li><a href="http://shop.lupus.org/store/default.aspx?sc=Homepage">Store</a></li><li>|</li><li><a href="http://www.lupus.org/webmodules/webarticlesnet/templates/new_aboutlanguages.aspx?articleid=415&amp;zoneid=21">En Español</a></li><li>|</li><li><a href="http://www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx?articleid=282&amp;zoneid=76">Site Map</a></li></ul></div></td>
+			<td width="13">&nbsp;</td></tr>
+	</tbody></table>
+			
+	</td>
   </tr>
   <tr>
     <td colspan="2"></td>
   </tr>
   <tr>
     <td colspan="2"><div id="div_navigation"><script type="text/javascript" language="JavaScript1.2" src="empty.js"></script></div></td>
-  </tr>
-  <tr>
-    <td colspan="2" bgcolor="#f5f5f5"><table width="100%" border="0">
-        <tbody><tr> 
-          <form id="searchbox_016941646516273541596:ivv9xkjkidg" action="http://www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx"></form>
-            <!-- Google CSE Search Box Begins -->
-            <td width="32%" height="0" valign="top"><input type="hidden" name="cx" value="016941646516273541596:ivv9xkjkidg"> 
-              <input type="hidden" name="cof" value="FORID:11"> <input name="q" type="text" size="18"> 
-              <input type="submit" name="sa" value="Search"> <img src="http://www.google.com/coop/images/google_custom_search_smnar.gif" alt="Google Custom Search"> 
-            </td>
-          
-          <td width="3%" valign="top">&nbsp;</td>
-          <td width="21%" valign="top"> <select name="Quick Links" onchange="MM_jumpMenu('parent',this,0)">
-              <option selected="selected">Quick Links</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx?articleid=277&amp;zoneid=76">Find 
-              a Chapter</option>
-              <option value="http://donate.lupus.org">Make a Donation</option>
-              <option value="http://shop.lupus.org/default.aspx?sc=LFAquicklinks">Shop 
-              the LFA Store </option>
-              <option value="http://donate.lupus.org/site/PageServer?pagename=registration">Sign-up 
-              for Enews </option>
-              <option value="http://www.lupusnow.org">Read / Subscribe to Lupus 
-              Now</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_empty.aspx?articleid=286&amp;zoneid=76">Contact 
-              the LFA / LFA Chapter</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_communityinteractive.aspx?articleid=517&amp;zoneid=98">Join 
-              a Webchat</option>
-            </select> </td>
-          <td width="3%"></td>
-          <td width="20%" valign="top"> <select name="Types of Lupus" onchange="MM_jumpMenu('parent',this,0)">
-              <option selected="selected">Types of Lupus</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_aboutintroduction.aspx?articleid=71&amp;zoneid=9">Systemic 
-              Lupus</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_aboutaffects.aspx?articleid=103&amp;zoneid=17">Discoid 
-              Lupus</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_aboutaffects.aspx?articleid=377&amp;zoneid=17">Drug-induced 
-              Lupus</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/?a=110&amp;z=18">Neonatal 
-              Lupus</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_aboutdiagnosis.aspx?articleid=82&amp;zoneid=15">APS</option>
-              <option value="http://www.lupus.org/webmodules/webarticlesnet/templates/new_aboutaffects.aspx?articleid=101&amp;zoneid=17">Overlap</option>
-            </select> </td>
-          <td width="21%" align="center" valign="middle"><script language="JavaScript" type="text/javascript">
-   document.write("<span class=\"vsmall\">"+doClock("M1","%20","D1",",%20","Y0")+"</span>");
-              </script><span class="vsmall">Jan 31, 2020</span></td>
-        </tr>
-      </tbody></table></td>
   </tr>
   <tr>
     <td colspan="2" valign="top"><table width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -154,18 +98,18 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 
                     <h2 class="default_headings">Privacy</h2>
                       <br>
-                    <p><font size="2">The Lupus Foundation of America is committed to protecting the privacy of its visitors. Information gathered through the LFA Website is used to monitor our site's effectiveness and to respond to your questions and requests. </font></p><br>
+                    <p><font size="2">The Lupus Foundation of America is committed to protecting the privacy of its visitors. Information gathered through the LFA website is used to monitor our site's effectiveness and to respond to your questions and requests. </font></p><br>
 <p><strong><font size="2">What information do we collect and how do we use it? </font></strong></p><br>
-<p><font size="2">Through this Website we collect information about the domain name (.com, .net, .edu, .gov) of a visitor's server (i.e., the name of the Internet service provider's computer that funnels traffic to the Internet) but use it only for measurement purposes. These measurements provide web site statistics, such as the number of visitors, "hits", and top pages transmitted. Knowing how the site is used, helps us develop plans for improvement of the site. The data we collect are totals of those visiting from a domain and not information on individual visitors. </font></p><br>
+<p><font size="2">We collect information about the domain name (.com, .net, .edu, .gov) of a visitor's internet service provider, and the computer and software used to access information published on this website.&nbsp; We use this information only for measurement purposes.&nbsp; These measurements provide total website statistics, such as the number of visitors, how and when visitors arrived at our website, which pages were viewed most often, and the type and version of software used to view pages.&nbsp; This information helps us to effectively manage the site and to plan for future improvements.&nbsp; The data we collect only summarizes website statistics.&nbsp; We do not gather or maintain data on pages viewed by individual website visitors. </font></p><br>
 <p><font size="2">We do not automatically collect email addresses or other personal information unless you provide it on a form, survey or email message. The information we collect is used in the following ways: </font></p><br>
-<p><font size="2">The Lupus Foundation of America does not sell, trade, or rent personal information about its Website visitors, except as noted below. You may request to have your name removed from these mailing lists. Please email us at <a href="mailto:info@lupus.org">info@lupus.org</a> and provide your full name, mailing address, and a sentence requesting deletion of your email address and/or postal information from our files. </font></p><br>
-<p><font size="2">Email addresses provided to us through the "E-advocates," "Mailing List," “LFA Store,” or when making a donation, are used to distribute advocacy alerts, electronic newsletters, and announcements or other communications that LFA distributes on behalf of other organizations or partners. In these cases, the visitor will have the opportunity to "unsubscribe" or request removal from future email advocacy or update mailing lists. </font></p><br>
-<p><font size="2">When you order products or services from the "LFA Store" or make a donation online, we need to know your name, email address, mailing address, credit card number, and expiration date. This allows us to process, fulfill, and acknowledge your order or donation. Secure server software encrypts all information you input before it is sent to us. </font></p><br>
-<p><font size="2">The LFA periodically exchanges only the names and mailing addresses of our donors, subscribers, and store customers with other organizations. We do not provide information about the amount donated or its purpose, or the products or publications that you purchased from us or one of our cause-related marketing partners. You may request that we not sell or exchange your name and mailing information by sending an email message to </font><a href="mailto:info@lupus.org"><font size="2">info@lupus.org </font></a><font size="2">that includes your full name, mailing address and a request that we not exchange your information with other organizations. </font></p><br>
-<p><font size="2">You may receive periodic mailings from the Lupus Foundation of America via the U.S. mail. If you do not wish to receive such mailings please provide your full name, mailing address, and a sentence requesting deletion of your postal information from our files, and email it to <a href="mailto:info@lupus.org">info@lupus.org</a>, or you can write to us at LFA, 2000 L Street, N.W., Suite 710, Washington , DC 20036 - USA. </font></p><br>
-<p><font size="2">When you use the "Email This Article to A Friend" function available in the articles posted on the LFA Home page, your email address is used only to let the recipient know who sent the link to the article, and in case of a transmission error. Your address and the recipient's address is not recorded and will not be used for any other purpose. </font></p><br>
-<p><font size="2">By using the Lupus Foundation of America Website, you consent to the collection and use of the information described above. Any changes to this policy will be posted. </font></p><br>
-<p><font size="2"><i>Revised September 20, 2006 -- Subject to change without notice.</i></font></p><br>
+<p><font size="2">The Lupus Foundation of America does not sell, trade, or rent personal information about its website visitors, except as noted below. You may request to have your name removed from these lists. Please email us at <a href="mailto:info@lupus.org">info@lupus.org</a> and provide your full name, mailing address, and a sentence requesting deletion of your email address and/or postal information from our files. </font></p><br>
+<p><font size="2">Email addresses provided to us through&nbsp;online forms (such as for our eAdvocates, mailing list,&nbsp;webchats, message boards,&nbsp;Ask the Experts,&nbsp;etc., or when making a donation or purchasing a product from our online store) are used to distribute receipts, acknowledgements, alerts, enewsletters,&nbsp;announcements, breaking news, or other communications that are sent out by LFA&nbsp;as part of its mission or at the request of organizations or partners who may be offering products or services that we&nbsp;have determined may&nbsp;be of interest to our&nbsp;website visitors.&nbsp; The LFA does not share email addresses with other organizations.&nbsp;&nbsp;&nbsp;Website visitors&nbsp;have the opportunity to unsubscribe or request removal from future email or update their mailing lists preferences. </font></p><br>
+<p><font size="2">When you order products or services from our online&nbsp;store, subscribe to our magazine,&nbsp;or make an online&nbsp;donation, we need to know your name, email address, mailing address, credit card number, and expiration date, and the products or services that you request from the LFA.&nbsp; This data allows us to process, fulfill, and acknowledge your order or donation. Secure server software encrypts all information you input before it is sent to us.&nbsp; Processing your order&nbsp;may require that your information be shared with third party vendors or contractors who provide&nbsp;services on our behalf (such as a firm that would package and ship publications or other educational materials you order from us).&nbsp; However,&nbsp;these third party firms&nbsp;are contractually required to keep this information strictly confidential.&nbsp; &nbsp;&nbsp;</font></p><br>
+<p><font size="2">The LFA periodically exchanges only the names and mailing addresses (not email addresses) of our donors, subscribers, and store customers with other organizations. We do not provide information about the amount donated or its purpose, or the products or publications that you purchased from us or one of our cause-related marketing partners. You may request that we not sell or exchange your name and mailing information by sending an email message to </font><a href="mailto:info@lupus.org"><font size="2">info@lupus.org </font></a><font size="2">that includes your full name, mailing address and a request that we not exchange your information with other organizations. </font></p><br>
+<p><font size="2">You may receive periodic mailings from the Lupus Foundation of America via the U.S. mail. If you do not wish to receive such mailings, please send your full name and mailing address, along with a request to be removed from our mail list, to <a href="mailto:info@lupus.org">info@lupus.org</a>, or you can write to us at LFA, 2000 L Street, N.W., Suite 710, Washington , DC 20036 - USA. </font></p><br>
+<p><font size="2">When you use the "Email This Article to A Friend" function available in the articles posted on the LFA website, your email address is used only to let the recipient know who sent the link to the article, and in case of a transmission error. Your address and the recipient's address are not recorded and will not be used for any other purpose. </font></p><br>
+<p><font size="2">By using the Lupus Foundation of America website, you consent to the collection and use of the information described above. Any changes to this policy will be posted. </font></p><br>
+<p><font size="2"><i>Revised&nbsp;March 30, 2009 -- Subject to change without notice.</i></font></p><br>
                     <p>                    </p>
                     <table border="0" cellspacing="2" cellpadding="2" align="left" width="20%">
                       <tbody><tr>
