--- a/i/im/ima/imageuploadonline.info.html
+++ b/i/im/ima/imageuploadonline.info.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the imageuploadonline.info privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216023822id_/http%3A//imageuploadonline.info/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the imageuploadonline.info privacy policy that was archived on 2009-06-16.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090616061651id_/http%3A//imageuploadonline.info/info.php%3Fact%3Dprivacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/2002/REC-xhtml1-20020801/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-gb" xml:lang="en-gb"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,12 +9,13 @@
 <title>MultiHoster » More Information » Privacy Policy</title>
 <meta name="keywords" content="image hosting, image hosting service, multiple image hosting, unlimited bandwidth, quick image hosting">
 <meta name="description" content="MultiHoster is an easy image hosting solution for everyone.">
-<base href="http://imageuploadonline.info/">
+<base href="http://www.imageuploadonline.info/">
 <link href="css/style.css" rel="stylesheet" type="text/css" media="screen">
 <link rel="shortcut icon" href="css/images/favicon.ico">
 <script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script>
 <script type="text/javascript" src="source/includes/genjscript.js"></script>
 </head>
+
 <body class="page_cell">
 	<div class="logo">&nbsp;</div>
 	<div class="nav_menu">
@@ -30,14 +31,21 @@
 	<div class="members_bar">
 					<div class="guest_links">
 				Welcome Guest
-				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL2ltYWdldXBsb2Fkb25saW5lLmluZm8vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'login_lightbox');">Log In</a> | 
-				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL2ltYWdldXBsb2Fkb25saW5lLmluZm8vaW5mby5waHA/YWN0PXByaXZhY3lfcG9saWN5', 'register_lightbox');">Register</a> )
+				( <a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=login&amp;return=aHR0cDovL3d3dy5pbWFnZXVwbG9hZG9ubGluZS5pbmZvL2luZm8ucGhwP2FjdD1wcml2YWN5X3BvbGljeQ==', 'login_lightbox');">Log In</a> | 
+				<a href="javascript:void(0);" onclick="javascript:toggle_lightbox('users.php?act=register&amp;return=aHR0cDovL3d3dy5pbWFnZXVwbG9hZG9ubGluZS5pbmZvL2luZm8ucGhwP2FjdD1wcml2YWN5X3BvbGljeQ==', 'register_lightbox');">Register</a> )
 			</div>
 			</div>
 	<div id="page_body" class="page_body">
+<center><a href="http://www.adultmoviefilm.com/en/index.html">Adult Movie Film, Free Preview Video, Worldwide Free Shipping</a></center>
+<a href="" "http:="" www.adultmoviefilm.com="" en="" index.html="" "]adultmoviefilm<="" a="">
 
 <center><font size="3"><strong>Strickly 18+ : If You are not Above 18 Pls close this site</strong></font></center><font size="3">
-<center><!-- Begin: Black Label Ads, Generated: 2008-11-26 16:38:39  -->
+</font></a><font size="3"><center><a href="" "http:="" www.adultmoviefilm.com="" en="" index.html="" "]adultmoviefilm<="" a=""><!-- UU9.EU 468x60 START -->
+<iframe width="468" height="60" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" src="http://uu9.eu/banner.php?id=3607"></iframe>
+<br></a><center><a href="" "http:="" www.adultmoviefilm.com="" en="" index.html="" "]adultmoviefilm<="" a=""></a><a href="http://uu9.eu" target="_blank">UU9.EU AD</a></center>
+<!-- END UU9.EU -->
+</center>
+<!-- Begin: Black Label Ads, Generated: 2009-03-03 16:10:54  -->
 <script type="text/javascript">
 var AdBrite_Title_Color = '0000FF';
 var AdBrite_Text_Color = '000000';
@@ -46,14 +54,28 @@ var AdBrite_Border_Color = 'CCCCCC';
 var AdBrite_URL_Color = '008000';
 try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=939499&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=939499&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20081216023822id_%2Fhttp%253A%2F%2Fimageuploadonline.info%2Finfo.php%253Fact%253Dprivacy_policy" type="text/javascript"></script>
-<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=939499&amp;afsid=55544"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
-<!-- End: Black Label Ads --></center>
+<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=1065784&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=1065784&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20090616061651id_%2Fhttp%253A%2F%2Fimageuploadonline.info%2Finfo.php%253Fact%253Dprivacy_policy" type="text/javascript"></script>
+<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=1065784&amp;afsid=55544"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
+<!-- End: Black Label Ads -->
+<center><!-- begin Ad World Media for channel: Dating , publisher: 12430 http://imageuploadonline.info , Ad Dimension: Super Banner - 728 x 90 -->
+<script language="javascript">
+document.write('<iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2448;s=12430;d=14;w=728;h=90;p=12430" frameborder=0 marginheight=0 marginwidth=0 scrolling="no" allowTransparency="true" width=728 height=90></iframe>');
+</script><iframe src="http://newt1.adultadworld.com/jsc/z5/ff2.html?n=607;c=2448;s=12430;d=14;w=728;h=90;p=12430" frameborder="0" marginheight="0" marginwidth="0" scrolling="no" allowtransparency="true" width="728" height="90"></iframe>
+<!-- end Ad World Media for channel: Dating , publisher: 12430 http://imageuploadonline.info , Ad Dimension: Super Banner - 728 x 90 --></center>
 
 
 
-
-
+<script type="text/javascript">
+//default banner house ad url 
+xxxwebtraffic_default_url = 'http://www.imageuploadonline.info/';
+xxxwebtraffic_banner_border = ''; xxxwebtraffic_banner_ad_bg = '#FFFFFF';
+xxxwebtraffic_banner_link_color = '#000000'; xxxwebtraffic_banner_text_color = '#000000';
+xxxwebtraffic_banner_text_banner = false; xxxwebtraffic_banner_image_banner = true;
+xxxwebtraffic_banner_show = 2;
+xxxwebtraffic_post_click_url = '';
+</script>
+<script type="text/javascript" src="http://serving.xxxwebtraffic.com/showAd_net.php?nid=3&amp;pid=1606&amp;adtype=1&amp;sid=1859"></script>
+<noscript><a href='http://xxxwebtraffic.com'>http://www.toed.ca | TORONTO ESCORTS</a></noscript> 
 
 When you sign up for an account with MultiHoster, we collect personal information from you including 
 your e-mail address, and a password.
@@ -82,7 +104,7 @@ If you have any question, please do not hesitate to <a href="contact.php?act=con
 		</script>
 		<script type="text/javascript" src="http://s7.addthis.com/js/addthis_widget.php?v=12"></script>
 		<!-- AddThis Bookmark Button END -->
-		| Page Views: 322,654
+		| Page Views: 7,835,460
 	</div>
 <center><!-- Begin: Black Label Ads, Generated: 2008-11-29 16:05:07  -->
 <script type="text/javascript">
@@ -93,8 +115,25 @@ var AdBrite_Border_Color = 'CCCCCC';
 var AdBrite_URL_Color = '008000';
 try{var AdBrite_Iframe=window.top!=window.self?2:1;var AdBrite_Referrer=document.referrer==''?document.location:document.referrer;AdBrite_Referrer=encodeURIComponent(AdBrite_Referrer);}catch(e){var AdBrite_Iframe='';var AdBrite_Referrer='';}
 </script>
-<span style="white-space:nowrap;"><script type="text/javascript">document.write(String.fromCharCode(60,83,67,82,73,80,84));document.write(' src="http://ads.adbrite.com/mb/text_group.php?sid=939499&zs=3732385f3930&ifr='+AdBrite_Iframe+'&ref='+AdBrite_Referrer+'" type="text/javascript">');document.write(String.fromCharCode(60,47,83,67,82,73,80,84,62));</script><script src="http://ads.adbrite.com/mb/text_group.php?sid=939499&amp;zs=3732385f3930&amp;ifr=1&amp;ref=https%3A%2F%2Fweb.archive.org%2Fweb%2F20081216023822id_%2Fhttp%253A%2F%2Fimageuploadonline.info%2Finfo.php%253Fact%253Dprivacy_policy" type="text/javascript"></script>
-<a target="_top" href="http://www.adbrite.com/mb/commerce/purchase_form.php?opid=939499&amp;afsid=55544"><img src="http://files.adbrite.com/mb/images/adbrite-your-ad-here-leaderboard.gif" style="background-color:#CCCCCC;border:none;padding:0;margin:0;" alt="Your Ad Here" width="14" height="90" border="0"></a></span>
 <!-- End: Black Label Ads --></center>
-<!-- Begin: Black Label Ads, Generated: 2008-11-29 16:02:17  -->
-</font></body></html>
+<!--Start Adultadworld.com GEOPop excluding Countries: HT--><script type="text/javascript" src="http://cluster.adultadworld.com/geopop/geoinject.js"></script><script type="text/javascript" language="javascript">displayBan('12430','HT', '2517', '1')</script><!--End Adultadworld.com GEOPop-->
+<!-- START ADULTADWORLD.COM CODES -->
+  <script src="http://cluster.adultadworld.com/includes/adultadworldpop_z.js"></script>
+  <script language="javascript">adultadworldpop(12430,2438);</script>
+<!-- END ADULTADWORLD.COM CODES --> 
+<!--Begin AdWorldMedia Interstitial Codes --><script type="text/javascript" src="http://cluster.adultadworld.com/intv2/interstitial.js"></script><script type="text/javascript">aawInt(12430);</script> <!--End AdWorldMedia Codes --> 
+<!-- START ADULTADWORLD.COM CODES -->
+  <script src="http://cluster.adultadworld.com/includes/adultadworldpop_z.js"></script>
+  <script language="javascript">adultadworldpop(12430,2438);</script>
+<!-- END ADULTADWORLD.COM CODES --> 
+<!-- Begin: Black Label Ads, Generated: 2009-03-03 16:33:09  -->
+<script type="text/javascript" src="http://ads.adbrite.com/mb/text_group.php?sid=1065800&amp;br=1"></script>
+<!-- End: Black Label Ads -->
+<script src="http://www.onegameplace.com/popup-pvd.js" type="text/javascript"></script>
+<script language="JavaScript">
+
+
+</body>
+</html>
+
+<!-- Powered by Mihalism Multi Host - Copyright (c) 2007, 2008 Mihalism, Inc. (www.mihalism.com) --></script></font></body></html>
